fixed spacing of app

--- a/to-do-app/src/Components/RandomQuote/RandomQuote.css
+++ b/to-do-app/src/Components/RandomQuote/RandomQuote.css
@@ -2,28 +2,28 @@
   font-family: 'VT323', cursive;
 }
 
-.container{
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    height: 100%;
-    background: #F1DBF6;
-    width: 100%;
-}
-.content-container{
+.container {
   display: flex;
-  flex-direction:row;
+  flex-direction: column;
   align-items: center;
-  height: 100%;
+  min-height: 100vh; /* Use min-height instead of height */
+  width: 100%;
+  background: #F1DBF6;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch; /* Ensure equal height for child items */
+  padding-bottom: 5%;
   background: #F1DBF6;
   width: 100%;
 }
 
-.inner-container{
+.inner-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
   background: #F1DBF6;
   width: 100%;
 }
@@ -82,7 +82,6 @@
   }
 
   .task-subtitle {
-    padding: 5%;
     color: #5E3E3E;
     font-size: 3em;
     text-align: Left;
@@ -93,6 +92,7 @@
   color: #5E3E3E;
   font-size: 3em;
   text-align: Left;
+  
 }
 
   .quote {
